<resources>
    <string name="app_name">NITJ Admin App</string>
    <string name="upload_notice">Upload Notice</string>
    <string name="delete_notice">Delete Notice</string>
    <string name="upload_image">Upload Image</string>
    <string name="select_image">Select Image</string>
    <string name="notice_title">Notice Title</string>
    <string name="upload_gallery_images">Upload Gallery Images</string>
    <string name="select_image_for_gallery">Select Image For Gallery</string>
    <string name="add_new_category">Add New Category</string>
    <string name="select_category">Select Category</string>
    <string name="select_ebook">Select Ebook</string>
    <string name="ebook_title">Ebook Title</string>
    <string name="upload_ebook">Upload Ebook</string>
    <string name="no_book_pdf_selected">No PDF/DOC/PPT File Selected</string>
    <string name="nit_jalandhar">NIT JALANDHAR</string>
    <string name="departments">DEPARTMENTS</string>
    <string name="departmentName">Instrumentation Control Engineering</string>
    <string name="facultyNo">Total Faculty : 5</string>
    <string name="name">Name</string>
    <string name="designation">Designation</string>
    <string name="department">Department</string>
    <string name="qualification">Qualification 1 (PhD)</string>
    <string name="research_interests">Research Interests</string>
    <string name="fax">Fax</string>
    <string name="updateTeacher">Update Faculty</string>
    <string name="delete_faculty">Delete Faculty</string>
    <string name="add_faculty">Add Faculty</string>
    <string name="email_id">Email ID</string>
    <string name="qualification_2_masters">Qualification 2 (Master\'s)</string>
    <string name="qualification_3_bachelor_s">Qualification 3 (Bachelor\'s)</string>
    <string name="no_faculty_data">NO FACULTY DATA</string>
    <string name="addNewFaculty">addNewFaculty</string>
    <string name="facultyName">Piyush Verma</string>
    <string name="designationFaculty">Principal</string>
    <string name="email">piyush09990@gmail.com</string>
    <string name="researchInterest">Research Interests :</string>
    <string name="content">Cloud Computing, Internet of Things (IoT), Parallel and Distributed Computing and Machine Learning</string>
    <string name="admin_college_app">Admin College App</string>
    <string name="delete">Delete</string>
    <string name="this_is_your_squad_commander_mactevish_here_thanks">This is your squad commander mactevish here thanks:)</string>
    <string name="no_notice_data">NO NOTICE DATA</string>
    <string name="no_department_data_found">No Department Data Found!</string>
</resources>