<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgHeadingDelNotice"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:src="@drawable/teacher_logo"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/nitJ_primary"/>

            <TextView
                android:id="@+id/txtHeadingDelNoticeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_toEndOf="@id/imgHeadingDelNotice"
                android:text="@string/admin_college_app"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDelButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/txtHeadingDelNoticeTitle"
                android:text="@string/delete" />

        </RelativeLayout>

        <TextView
            android:id="@+id/txtDelNoticeMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_is_your_squad_commander_mactevish_here_thanks"
            android:textColor="@color/textColor"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/imgDelNoticeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY" />

    </LinearLayout>

</androidx.cardview.widget.CardView>