<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nitJ_primary"
    android:orientation="vertical"
    tools:context=".screens.AllBranches">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/nitJLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@id/nitJLogo"
            android:text="@string/nit_jalandhar"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDepartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTitle"
            android:layout_marginStart="22dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/nitJLogo"
            android:text="@string/departments"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/circular_border_layout_design">

        <androidx.cardview.widget.CardView
            android:id="@+id/noDepartmentData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40dp"
            android:visibility="gone"
            app:cardCornerRadius="30dp"
            android:backgroundTint="@color/tileBackgroundLight"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/noDepartmentDataText"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/no_department_data_found"
                android:textColor="@color/textColor"
                android:textSize="40sp" />
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/allBranchRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/circular_border_layout_design" />
    </RelativeLayout>

</LinearLayout>