<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.UploadGalleryImages">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabGallery"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="20dp"
        android:contentDescription="@string/addNewFaculty"
        android:src="@drawable/ic_add" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/selectImageForGallery"
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:layout_margin="25dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circle_red"
                        android:padding="15dp"
                        android:src="@drawable/ic_add_image" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/lightGrey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/select_image_for_gallery"
                        android:textColor="@color/textColor"
                        android:textStyle="bold" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <EditText
                android:id="@+id/addNewCategory"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:layout_marginRight="25dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_add_category_icon"
                android:drawablePadding="12dp"
                android:hint="@string/add_new_category"
                android:inputType="text"
                android:padding="15dp" />

            <Spinner
                android:id="@+id/selectImageCategory"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/custom_spinner"
                android:gravity="center"
                android:padding="15dp"
                android:spinnerMode="dropdown" />

            <Button
                android:id="@+id/uploadGalleryImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:background="@drawable/custom_input"
                android:text="@string/upload_image"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp">

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:id="@+id/galleryImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>